# risk-management-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: AI_USAGE.md  SCALING.md
src/: app.py  config.py  engine.py  models.py  simulator.py  streamer.py
src/templates/: dashboard.html
tests/: test_engine.py
