[project]
name = "risk-management-dashboard"
version = "0.1.0"
description = "MVP risk management dashboard for book management metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "quart>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
